<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    app:flow_verticalAlign="center"
    android:gravity="center_vertical"
    android:backgroundTint="@color/emotion_bg">

    <TextView
        android:id="@+id/emotionSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emotion_subtitle_1"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/r_flex_lightitalic"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minusButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@drawable/roundstyle_plusminus"
            android:backgroundTint="@color/main_orange"
            android:text="@string/minus"
            android:layout_marginStart="24dp"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/emotionCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/default_emotion_value"
            android:fontFamily="@font/r_flex_bold"
            android:textSize="140sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plusButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/roundstyle_plusminus"
            android:backgroundTint="@color/main_orange"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="32sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/emotionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emotion_heading_1"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/r_flex_bold"
        android:textSize="48sp" />



</LinearLayout>