<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_f0"
    tools:context=".emotions.CreateNewPost">

    <androidx.cardview.widget.CardView
        android:id="@+id/newStoryBanner"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_margin="24dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/emotion_bg">
            <TextView
                android:id="@+id/tvJournalHelper"
                style="@style/textView_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/r_flex_mediumitalic"
                android:layout_marginTop="24dp"
                android:text="@string/journal_helper"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/paintingContainer"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:layout_height="300dp"
                android:padding="24dp"
                app:layout_constraintTop_toBottomOf="@id/tvJournalHelper"
                android:background="@color/emotion_bg">

                <ImageView
                    android:id="@+id/ivPaintingJournal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.4"
                    android:transitionName="sharedElementTransPaintings"
                    android:scaleType="centerCrop"
                    android:src="@drawable/starry_night" />

                <TextView
                    android:id="@+id/tvArtTitleJournal"
                    android:layout_width="0dp"
                    android:layout_marginTop="80dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/r_flex_black"
                    android:text="@string/starry_night_title"
                    android:textColor="@color/white"
                    android:transitionName="sharedElementTransTitle"

                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvArtArtistJournal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/r_flex_mediumitalic"
                    android:text="@string/starry_night_artist"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:transitionName="sharedElementTransArtist"
                    app:layout_constraintBottom_toTopOf="@+id/tvArtYearJournal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvArtTitleJournal" />

                <TextView
                    android:id="@+id/tvArtYearJournal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/r_flex_lightitalic"
                    android:text="@string/starry_night_style"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:transitionName="sharedElementTransYear"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvArtTitleJournal" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="12dp"
                android:padding="8dp"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paintingContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/journalInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:fontFamily="@font/r_flex_medium"
                    android:hint="@string/journal_placeholder"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="12sp">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/journalPostButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white_f0"
                android:fontFamily="@font/r_flex_black"
                android:text="@string/journal_button"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayout"
                android:background="@drawable/roundstyle"
                android:layout_marginTop="36dp"/>

            <ProgressBar
                android:id="@+id/journalProgressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>